--- a/client/src/Pages/TeacherPage/style.css
+++ b/client/src/Pages/TeacherPage/style.css
@@ -17,14 +17,15 @@
   display: flex;
   flex-direction: row;
   gap: 12px;
+  background-color: rgb(229, 231, 235);
 }
 
 .header-container{
+  width: auto;
   display: flex;
   flex-direction: column;
-  border: solid;
-  border-color: 5px solid black;
-  border-radius: 5px;
+  justify-content: flex-start;
+  text-justify: initial;
 }
 
 .title-container {
@@ -39,7 +40,7 @@
   flex-direction: row;
   justify-content: space-between;
   padding: 12px;
-  max-width: 200px;
+  width: 50px;
   }
 
 @media (max-width: 800px) {
@@ -117,40 +118,45 @@
 .container-md{
   display: flex;
   align-items: center;
-  margin-top: 20px;
-  padding: 25px;
+  margin-top: 10px;
+  padding: 10px;
   flex-wrap: wrap;
 }
 
 .groups-container{
   display: flex;
   flex-direction: column;
-  /* justify-content:center ; */
-  gap: 15px;
   border-radius: 20px;
-  border: 2px solid gray;
   height: fit-content;
+  margin-top: 0px;
 }
 
-.group-container-title{
+.group-title-button{
+  width: auto;
   display: flex;
-  width: 500px;
   flex-direction: row;
-  height: 35px;
-  align-items: center;
-  justify-content: flex-start;
+  justify-content:space-between ;
+}
+
+.groups-button{
+  margin-right: 20px;
+}
+
+.event-button{
+  margin-right: 20px;
 }
 
 .cards-container{
   display: flex;
   flex-direction: row;
   justify-content:center ;
-  border-radius: 20px;
+  width: auto;
+  margin-top: 0px;
 }
 
 .events-container{
   display: flex;
   flex-direction: column;
-  border: 2px solid gray;
+  background-color: #fff;
 }
 
