--- a/client/src/components/ShowGroupsByProject/style.css
+++ b/client/src/components/ShowGroupsByProject/style.css
@@ -1,15 +1,16 @@
 .cards{
     width: auto;
-    background-color: antiquewhite;
     display: flex;
     flex-direction: row;
-   gap: 80px;
-   flex-wrap: wrap;
-   padding: 0px;
-   margin: 0px;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+    
 }
 
 .Card-box{
-    width: auto;
+    width: 300px;
+    height: auto;
+    padding: 0 90px;
     
 }
