--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,9 @@
 .App {
   text-align: center;
-  background-color: rgb(229, 231, 235);
+ background-color: #f0f0f0; /* cinza claro */
+  margin: 0;
+  font-family: Arial, sans-serif;
+
 }
 
 
